<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Attendees">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="179dp"
        android:layout_marginLeft="179dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="180dp"
        android:text="@string/event_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/menu_button_text"
        android:onClick="showPopup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="395dp"
        android:layout_height="571dp"
        android:layout_marginTop="10dp"
        android:clickable="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="398dp"
                android:layout_height="663dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/scrollView2"
                app:layout_constraintTop_toTopOf="@+id/scrollView2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="88dp"
                        android:layout_height="103dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/profile_image"
                        app:layout_constraintStart_toStartOf="@+id/scrollView2"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2"
                        tools:srcCompat="@tools:sample/avatars[6]" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mary"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="88dp"
                        android:layout_height="103dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/profile_image"
                        app:layout_constraintStart_toStartOf="@+id/scrollView2"
                        app:layout_constraintTop_toTopOf="@+id/scrollView2"
                        tools:srcCompat="@tools:sample/avatars[2]" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Brandon"
                        android:textSize="18sp"
                        tools:layout_editor_absoluteX="128dp"
                        tools:layout_editor_absoluteY="211dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="88dp"
                        android:layout_height="103dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/profile_image"
                        app:layout_constraintStart_toStartOf="@+id/scrollView2"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3"
                        tools:srcCompat="@tools:sample/avatars[4]" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="James"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="88dp"
                        android:layout_height="103dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/profile_image"
                        app:layout_constraintStart_toStartOf="@+id/scrollView2"
                        app:layout_constraintTop_toBottomOf="@+id/imageView4"
                        tools:srcCompat="@tools:sample/avatars[1]" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jack"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="88dp"
                        android:layout_height="103dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/profile_image"
                        app:layout_constraintStart_toStartOf="@+id/scrollView2"
                        app:layout_constraintTop_toBottomOf="@+id/imageView5"
                        tools:srcCompat="@tools:sample/avatars[5]" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Annette"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="88dp"
                        android:layout_height="103dp"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/profile_image"
                        app:layout_constraintStart_toStartOf="@+id/scrollView2"
                        app:layout_constraintTop_toBottomOf="@+id/imageView6"
                        tools:layout_editor_absoluteX="16dp"
                        tools:srcCompat="@tools:sample/avatars[15]" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rose"
                        android:textSize="18sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/attendees_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</android.support.constraint.ConstraintLayout>